--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,13 +16,14 @@
 			"extensions": [
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
-				"dbaeumer.vscode-eslint"
+				"dbaeumer.vscode-eslint",
 			]
 		}
 	},
 	"features": {
 		"aws-cli": "latest",
-		"azure-cli": "latest"
+		"azure-cli": "latest",
+		"terraform": "1.3.8"
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
